<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg"
    android:clickable="true"
    android:focusableInTouchMode="true">


    <android.support.v7.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorCard"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="7dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rl_banner_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/tv_banner_text"
                android:textColor="@color/whitee"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_text_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_banner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tv_banner"
                android:textColor="@color/login_email"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <ImageView
        android:id="@+id/iv_top_image_login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_splash_bgg" />


    <ScrollView
        android:id="@+id/sv_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_top_image_login"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:id="@+id/rv_main_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_login_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:padding="20dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/rl_login_email_address"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:paddingBottom="17dp"
                        android:paddingEnd="17dp"
                        android:paddingLeft="17dp"
                        android:paddingRight="17dp"
                        android:paddingStart="17dp"
                        android:paddingTop="22dp">

                        <ImageView
                            android:id="@+id/iv_login_email_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/ic_email_addresss" />

                    </RelativeLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tin_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="50dp"
                        android:layout_marginStart="50dp"
                        android:textColorHint="@color/grey">

                        <EditText
                            android:id="@+id/edt_login_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:digits="@string/useremail_text"
                            android:ellipsize="start"
                            android:gravity="clip_horizontal"
                            android:hint="@string/login_email_user"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="15sp" />

                    </android.support.design.widget.TextInputLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_et_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_et_email"
                    android:layout_marginTop="15dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/rl_password"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:paddingBottom="17dp"
                        android:paddingEnd="17dp"
                        android:paddingLeft="17dp"
                        android:paddingRight="17dp"
                        android:paddingStart="17dp"
                        android:paddingTop="25dp">

                        <ImageView
                            android:id="@+id/iv_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/ic_login_password" />

                    </RelativeLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tin_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="50dp"
                        android:textColorHint="@color/grey">

                        <in.anshul.libray.PasswordEditText
                            android:id="@+id/edt_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:digits="@string/useremail_text"
                            android:hint="@string/edt_login_password"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            app:hide_drawable="@drawable/ic_show_password"
                            app:password_visible="false"
                            app:show_drawable="@drawable/ic_hide_password" />


                    </android.support.design.widget.TextInputLayout>

                </android.support.v7.widget.CardView>

                <!--<android.support.v7.widget.CardView
                    android:id="@+id/cv_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_et_facebook"
                    android:layout_marginTop="30dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/login_email"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="5dp">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="@string/login_text"
                        android:textColor="@color/whitee"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>-->


                <android.support.v7.widget.CardView
                    android:id="@+id/cv_login_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_et_facebook"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="@color/login_email"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="5dp"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardElevation="7dp"
                    card_view:cardPreventCornerOverlap="true"
                    card_view:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingEnd="30dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingStart="30dp"
                        android:paddingTop="10dp"
                        android:text="@string/login_text"
                        android:textColor="@color/whitee"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </android.support.v7.widget.CardView>


                <RelativeLayout
                    android:id="@+id/rl_forgetpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_login_email"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_forgetpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/forgot_password_text"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_forgetpassword"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/txt_or"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:id="@+id/rl_signup_below"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_or"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_signup_below"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/signup_below"
                        android:textColor="@color/login_email"
                        android:textSize="15sp" />

                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>